create components for meal list, add, dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <div class="jumbotron">
   <h1>Meal Tracker</h1>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <app-meal-dash></app-meal-dash>
+      <app-meal-list></app-meal-list>
+    </div>
+    <div class="col-sm-4">
+      <app-meal-add></app-meal-add>
+    </div>
+  </div>
+</div>
