update meal-list to display meal properties with minimal styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-sm-8">
       <app-meal-dash></app-meal-dash>
-      <app-meal-list></app-meal-list>
+      <app-meal-list [meals]="meals"></app-meal-list>
     </div>
     <div class="col-sm-4">
       <app-meal-add></app-meal-add>
