add form to meal-add, methods to add meal to datastore

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <app-meal-list [meals]="meals"></app-meal-list>
     </div>
     <div class="col-sm-4">
-      <app-meal-add></app-meal-add>
+      <app-meal-add (clickSender)="addMeal($event)"></app-meal-add>
     </div>
   </div>
 </div>
