add edit field to dashboard component, link to click event on list

--- a/src/app/meal-list/meal-list.component.html
+++ b/src/app/meal-list/meal-list.component.html
@@ -1,6 +1,6 @@
 <div class="well">
   <ul>
-    <li *ngFor="let meal of meals | calorieFilter:filterBy">Meal: {{meal.name}}
+    <li *ngFor="let meal of meals | calorieFilter:filterBy" (click)="sendMealToEdit(meal)">Meal: {{meal.name}}
       <ul>
         <li>Meal Notes: {{meal.notes}}</li>
         <li>Calories: {{meal.calories}}</li>
