--- a/src/app/meal-dash/meal-dash.component.html
+++ b/src/app/meal-dash/meal-dash.component.html
@@ -1,3 +1,8 @@
-<p>
-  meal-dash works!
-</p>
+<div class="well">
+  <h2>Today's Meals</h2>
+  <div class="edit" *ngIf="mealToEdit">
+    <p>
+      {{mealToEdit.name}}
+    </p>
+  </div>
+</div>
