add findBy and update methods to data service

--- a/src/app/meal-dash/meal-dash.component.html
+++ b/src/app/meal-dash/meal-dash.component.html
@@ -1,8 +1,7 @@
 <div class="well">
   <h2>Today's Meals</h2>
   <div class="edit" *ngIf="mealToEdit">
-    <p>
-      {{mealToEdit.name}}
-    </p>
+    <h4>Edit Meal</h4>
+    
   </div>
 </div>
