--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-8">
-      <app-meal-dash [meals]="meals" [mealToEdit]="mealToEdit"></app-meal-dash>
+      <app-meal-dash [meals]="meals" [mealToEdit]="mealToEdit" (saveEdit)="saveEdit($event)"></app-meal-dash>
       <app-meal-list [meals]="meals" (sendEdit)="openEdit($event)" ></app-meal-list>
     </div>
     <div class="col-sm-4">
