refactor add template to clear values after submit

--- a/src/app/meal-add/meal-add.component.html
+++ b/src/app/meal-add/meal-add.component.html
@@ -5,5 +5,5 @@
   <input #mealNotes>
   <label>Total Calories:</label>
   <input #mealCalories>
-  <button (click)="addMeal(mealName.value, mealNotes.value, mealCalories.value)">Add Meal</button>
+  <button (click)="addMeal(mealName.value, mealNotes.value, mealCalories.value); mealName.value=''; mealNotes.value=''; mealCalories.value='';">Add Meal</button>
 </div>
