--- a/src/app/meal-add/meal-add.component.html
+++ b/src/app/meal-add/meal-add.component.html
@@ -1,10 +1,9 @@
 <div class="well">
   <label>Enter Meal Name:</label>
-  <input #mealName>
-  <label>Notes on the meal:</label>
-  <input #mealNotes>
+  <input #mealName class="form-control">
   <label>Total Calories:</label>
-  <input #mealCalories>
+  <input #mealCalories class="form-control">
+  <label>Notes on the meal:</label>
+  <textarea #mealNotes class="form-control"></textarea>
   <button (click)="addMeal(mealName.value, mealNotes.value, mealCalories.value); mealName.value=''; mealNotes.value=''; mealCalories.value='';">Add Meal</button>
-  <button type="button" (click)="cancelEdit()">Cancel</button>
 </div>
