--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>Meal Tracker</h1>
+  <span class="white"><h1>Meal Tracker</h1></span>
 </div>
 <div class="container">
   <div class="row">
